--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta name="juicyads-site-verification" content="d096f51382cb0b72a087054685b5cf20">
   <title>MiTube - Video Populares</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4801647812585318"
      crossorigin="anonymous"></script>
+ 
 </head>
 <body class="bg-gray-100 text-gray-900">
 
