--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button id="searchButton" class="bg-white text-indigo-500 p-3 rounded-lg shadow-md hover:bg-indigo-50">Buscar</button>
       </div>
     </div>
-
+<script type="text/javascript" src="https://js.juicyads.com/jp.php?c=445433v2v214u4r2o2c433b414&u=http%3A%2F%2Fwww.juicyads.rocks"></script>
     <!-- Barra de navegación -->
     <nav class="mt-4">
       <ul class="flex justify-center md:justify-start gap-6 text-white font-semibold text-lg">
