--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
       </button>
     
       <h2 id="video-title" class="text-4xl font-bold mb-4 text-gray-800"></h2>
-    
+    <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1088370" data-width="728" data-height="90"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1088370});</script>
       <div class="mb-6">
         <iframe id="video-iframe" class="w-full h-[450px] rounded-lg border-2 border-gray-300 shadow-lg" allowfullscreen></iframe>
       </div>
