--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </div>
 <script type="text/javascript" src="https://js.juicyads.com/jp.php?c=445433v2v214u4r2o2c433b414&u=http%3A%2F%2Fwww.juicyads.rocks"></script>
     <!-- Barra de navegación -->
+    <!-- Start JuicyAds Float Ad -->
+<script type="text/javascript">juicy_adzone = '1088502';</script>
+<script type="text/javascript" src="https://poweredby.jads.co/js/jfc.js" charset="utf-8"></script>
+<!-- End JuicyAds Float Ad -->
     <nav class="mt-4">
       <ul class="flex justify-center md:justify-start gap-6 text-white font-semibold text-lg">
         <li><a href="videosearch.html" class="hover:underline">Inicio</a></li>
