--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
  
 </head>
 <body class="bg-gray-100 text-gray-900">
-
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1088511" data-width="160" data-height="600"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1088511});</script>
+<!--JuicyAds END-->
   <!-- Header con barra de navegación incluida -->
   <header class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 p-6 shadow-lg">
     <div class="flex flex-col md:flex-row md:justify-between md:items-center gap-4">
@@ -68,6 +72,8 @@
       <div id="thumb-gallery" class="grid grid-cols-4 gap-3 mt-6"></div>
     </section>
   </main>
+  <!-- JuicyAds Native Interstitals v1.0 -->
+<script type="text/javascript" data-id="juicyads-native-ads" data-ad-zone="1088507" data-targets="a" src="https://js.juicyads.com/juicyads.native-ads.min.js"></script>
 
   <!-- Paginación -->
   <div id="pagination" class="flex justify-center mt-8 space-x-4">
@@ -79,7 +85,11 @@
       Siguiente →  
     </button>
   </div>
-
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1088508" data-width="468" data-height="60"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1088508});</script>
+<!--JuicyAds END-->
   <script src="app.js"></script>
 </body>
 </html>
