--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
 <script type="text/javascript" src="https://poweredby.jads.co/js/jfc.js" charset="utf-8"></script>
 <!-- End JuicyAds Float Ad -->
     <section id="video-detail" class="hidden bg-white rounded-lg shadow-xl p-6 max-w-4xl mx-auto">
+      <!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1088512" data-width="308" data-height="286"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1088512});</script>
+<!--JuicyAds END-->
       <button id="backBtn" class="mb-4 text-blue-600 hover:underline flex items-center font-semibold text-lg">
+        
         ← Volver al listado
       </button>
     
